# hikidashi-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: aho_corasick.hpp  ancestor_binary_lifting.hpp  ancestor_binary_lifting.hpp-E  arrays.hpp  bellman_ford.hpp  bellman_ford.hpp-E  berlekamp_massey.hpp-E  binary_lifting.hpp  binary_trie.hpp  bipartite_checker.hpp  bipartite_matching.hpp  bisect.hpp  bisect.hpp-E  bitops.hpp  bitops.hpp-E  bostan_mori.hpp  bostan_mori.hpp-E  broad_dual_segtree.hpp  broad_segtree.hpp  burny.hpp  ceildiv.hpp  centroid_decomposition.hpp  centroid_decomposition.hpp-E  chromatic_number.hpp  combination.hpp  compress.hpp  compress.hpp-E  compress_test.cpp  compressed.hpp  compressor.hpp  convex_hull_trick.hpp  coordinate_compression.hpp  core.hpp  core.hpp-E  cumulative_sum.hpp  cumulative_sum_2d.hpp  cumulative_sum_2d.hpp-E  debug_signal.hpp  dfs_tree.hpp  dijkstra.hpp  (+153 more)
tests/: bisect_test.cpp  compress_test.cpp  geometry_int_test.cpp  modint_test.cpp  rational_test.cpp  rolling_hash_test.cpp  wavelet_matrix_test.cpp
